# VisageDvachevsky-katana-dev

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARK_FINAL.md  BENCHMARK_RESULTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  OPTIMIZATION_RESULTS.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  STAGE2_ANALYSIS.md  STAGE2_PROGRESS.md  conanfile.py  debug_test.cpp  generate_benchmark_report.py  run_benchmarks.sh  test_api.yaml  test_debug.cpp  vcpkg.json
.docker_build/profile/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
.docker_build/profile/benchmark/: CTestTestfile.cmake  cmake_install.cmake  performance_benchmark
.docker_build/profile/test/: CTestTestfile.cmake  cmake_install.cmake
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  manual-benchmarks.yml  perf-regression.yml  pr-ci.yml
.pre-commit-cache/: db.db
benchmark/: CMakeLists.txt  async_benchmark.cpp  comprehensive_benchmark.cpp  generated_api_benchmark.cpp  headers_benchmark.cpp  io_buffer_benchmark.cpp  json_benchmark.cpp  latency_benchmark.cpp  mpsc_benchmark.cpp  openapi_benchmark.cpp  performance_benchmark.cpp  products_api_benchmark.cpp  router_benchmark.cpp  simple_benchmark.cpp  test_api.yaml  timer_benchmark.cpp
benchmarks/: baseline.json
docker/benchmarks/: Dockerfile  Dockerfile.bench  Dockerfile.epoll  entrypoint.sh
docker/profiling/: Dockerfile.profile  entrypoint.sh
docs/: BENCHMARKING_METHODOLOGY.md  BENCHMARK_METHODOLOGY.md  CODEGEN.md  CODEGEN_VERIFICATION.md  FRAMEWORK_INTERNALS.md  HTTP_SERVER.md  OPENAPI.md  PERFORMANCE_DEEP_ANALYSIS.md
docs/profiling/: README.md
examples/: basic_reactor.cpp  hello_world_server.cpp  middleware_examples.cpp  raii_echo_server.cpp  raii_http_server.cpp  router_rest_api.cpp  simple_rest_api.cpp
examples/codegen/: README.md
examples/codegen/compute_api/: main.cpp
examples/codegen/products_api/: CMakeLists.txt  README.md  api.yaml  main.cpp
examples/codegen/simple_crud/: CMakeLists.txt  README.md  api.yaml  main.cpp  main_codegen.cpp  main_simple.cpp  test_requests.sh
examples/codegen/validation_api/: CMakeLists.txt  README.md  api.yaml  main.cpp
katana/core/include/katana/core/: arena.hpp  circular_buffer.hpp  content_negotiation.hpp  epoll_reactor.hpp  fd_event.hpp  fd_watch.hpp  http.hpp  http_field.hpp  http_headers.hpp  http_server.hpp  inplace_function.hpp  io_buffer.hpp  io_uring_reactor.hpp  metrics.hpp  mpsc_queue.hpp  openapi_ast.hpp  platform.hpp  problem.hpp  reactor.hpp  reactor_impl.hpp  reactor_pool.hpp  result.hpp  ring_buffer_queue.hpp  router.hpp  serde.hpp  shutdown.hpp  simd_utils.hpp  tcp_listener.hpp  tcp_socket.hpp  timeout.hpp  wheel_timer.hpp
katana/core/src/: arena.cpp  epoll_reactor.cpp  http.cpp  http_field.cpp  http_server.cpp  io_buffer.cpp  io_uring_reactor.cpp  openapi_loader.cpp  problem.cpp  reactor_pool.cpp  tcp_listener.cpp  tcp_socket.cpp
profiling_results/performance_benchmark_20251125T011625Z/: perf.data
profiling_results/performance_benchmark_20251125T011640Z/: perf.data
profiling_results/performance_benchmark_20251125T011648Z/: perf.data
profiling_results/performance_benchmark_20251125T011703Z/: perf.data
profiling_results/performance_benchmark_20251125T011716Z/: perf.data
profiling_results/performance_benchmark_20251125T011738Z/: perf.data
profiling_results/performance_benchmark_20251125T011753Z/: perf.data
profiling_results/performance_benchmark_20251125T012323Z/: perf.data
profiling_results/performance_benchmark_20251125T013003Z/: perf.data  perf.folded  perf.script  perf_report.txt
profiling_results/performance_benchmark_20251125T013418Z/: perf.data  perf.folded  perf.script  perf_report.txt
profiling_results/performance_benchmark_20251125T024151Z/: perf.folded  perf.script  perf_report.txt
profiling_results/performance_benchmark_20251125T025425Z/: perf.folded  perf.script  perf_report.txt
scripts/: compare_benchmarks.py  profile.sh  profile_deep.sh  update_readme_from_bench.py
test/: CMakeLists.txt
test/fuzz/: CMakeLists.txt  http_parser_fuzz.cpp  openapi_parser_fuzz.cpp
test/gtest/: gtest.h
test/integration/: test_fixture_load.cpp  test_http_server.cpp
test/load/: README.md  products_api_load_test.sh  run_benchmarks.sh
test/load/scripts/: post.lua  rest_api.lua
test/support/: http_handler_harness.hpp  virtual_event_loop.hpp
test/unit/: test_circular_buffer.cpp  test_codegen_integration.cpp  test_codegen_snapshots.cpp  test_http.cpp  test_http_fuzzer_regression.cpp  test_http_handler_harness.cpp  test_io_buffer.cpp  test_json_parser.cpp  test_openapi_ast.cpp  test_platform.cpp  test_problem.cpp  test_reactor.cpp  test_reactor_pool.cpp  test_result.cpp  test_ring_buffer_queue.cpp  test_shutdown.cpp  test_simd_utils.cpp  test_system_limits.cpp  test_tcp_listener.cpp  test_tcp_socket.cpp  test_virtual_event_loop.cpp  test_wheel_timer.cpp
tools/: katana_gen.cpp
tools/katana_gen/: dto_generator.cpp  generator.hpp  generator_utils.cpp  json_generator.cpp  options.cpp  options.hpp  router_generator.cpp  validator_generator.cpp
